[package]
name        = "foxy_time"
version     = "1.1.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/foxy-rs/foxy_time"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "Common time utilities for `foxy`"
keywords    = ["foxy"]
categories  = ["data-structures", "date-and-time", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing   = { version = "0.1" }
quanta    = "0.12"
